# Mandelbrot_Fractal_Simulation

./: CMakeLists.txt  README.md
assets/: mandelbrot.frag
src/: main.cpp  main.guide.cpp
